@@ -1,9 +1,10 @@
 h1. CHANGELOG
 
-h2. 1.1.5 February 22, 2012
+h2. 1.1.5 unreleased
 
 * add 'confirmable' and 'invitable' options to 'devise' recipe
 * change prompt for 'guard' recipe
+* add 'rake db:test:prepare' to 'seed_database' recipe
 
 h2. 1.1.4 February 21, 2012
 
